// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          job
          : 
        </strong>
        <span>
          software engineer
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          doesProgram
          : 
        </strong>
        <span>
          true
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          number
          : 
        </strong>
        <span>
          10
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 2`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          job
          : 
        </strong>
        <span>
          software engineer
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          doesProgram
          : 
        </strong>
        <span>
          true
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          number
          : 
        </strong>
        <span>
          10
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 3`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      apple
    </div>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      banana
    </div>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      carrot
    </div>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 4`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      # This page has JSON front matter!
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          JSON
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          description
          : 
        </strong>
        <span>
          Front Matter
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 5`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      Content
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Admin
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          user
          : 
        </strong>
        <span>
          BenjiTheGreat
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 6`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Members
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          BenjiTheGreat
        </div>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          Steve_The_Great
        </div>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          John The Great
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 7`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Members
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <span>
          BenjiTheGreat Steve_The_Great John The Great
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 8`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Admins
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <span>
          BenjiTheGreat
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 9`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          work on YAML.py
          : 
        </strong>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          work on Store
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 10`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          include_newlines
          : 
        </strong>
        <span>
          exactly as you see
will appear these three
lines of poetry

        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 11`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          fold_same_newlines
          : 
        </strong>
        <span>
          a b c d e f 
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 12`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          cascade
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              _target
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  kind
                  : 
                </strong>
                <span>
                  page
                </span>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  lang
                  : 
                </strong>
                <span>
                  en
                </span>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  path
                  : 
                </strong>
                <span>
                  /blog/**
                </span>
              </div>
            </section>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              background
              : 
            </strong>
            <span>
              yosemite.jpg
            </span>
          </div>
        </section>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              _target
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  kind
                  : 
                </strong>
                <span>
                  section
                </span>
              </div>
            </section>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              background
              : 
            </strong>
            <span>
              goldenbridge.jpg
            </span>
          </div>
        </section>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Blog
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 13`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          with-random-chars
          : 
        </strong>
        <span>
          this-is-a-test 123 : 456: abc - 890!
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          current time
          : 
        </strong>
        <span>
          Thursday, December 22nd 2022, 10:09:56 pm
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          time tomorrow
          : 
        </strong>
        <span>
          Friday,--------December 23nd 2022, 10:09:55 pm
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          access areas
          : 
        </strong>
        <span>
          all : 123
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 14`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          windows_path
          : 
        </strong>
        <span>
          c:\\windows
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 15`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Users
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              BenjiTheGreat
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  permissions
                  : 
                </strong>
                <div
                  className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
                >
                  login
                </div>
                <div
                  className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
                >
                  logout
                </div>
                <div
                  className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
                >
                  chat
                </div>
                <div
                  className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
                >
                  access control
                </div>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  timezone
                  : 
                </strong>
                <span>
                  GMT
                </span>
              </div>
            </section>
          </div>
        </section>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              SnakeTheBate
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  permissions
                  : 
                </strong>
                <div
                  className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
                >
                  login
                </div>
                <div
                  className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
                >
                  logout
                </div>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  timezone
                  : 
                </strong>
                <span>
                  EST
                </span>
              </div>
            </section>
          </div>
        </section>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 16`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          foo
          : 
        </strong>
        <span>
          whatever
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          bar
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              fruit
              : 
            </strong>
            <span>
              apple
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              name
              : 
            </strong>
            <span>
              steve
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              sport
              : 
            </strong>
            <span>
              baseball
            </span>
          </div>
        </section>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          more
        </div>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          info
        </div>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              python
              : 
            </strong>
            <span>
              rocks
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              perl
              : 
            </strong>
            <span>
              papers
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              ruby
              : 
            </strong>
            <span>
              scissorses
            </span>
          </div>
        </section>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 17`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              label
              : 
            </strong>
            <span>
              hello
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              color
              : 
            </strong>
            <span>
              red
            </span>
          </div>
        </section>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          benji
        </div>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          bob
        </div>
        <div
          className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
        >
          mike
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 18`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      What's Yaml?
    </div>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      It's for writing data structures in plain text.
    </div>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      And?
    </div>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      And what? That's not good enough for you?
    </div>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      No, I mean, "And what about Yaml?"
    </div>
    <div
      className="themes_styles_badge__xd3hr9v defaults_defaults_badge__cxs0rsd"
    >
      Oh, oh yeah. Uh.. Yaml for Ruby.
    </div>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 19`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      &lt;span class="alert alert-info"&gt;This is an alert&lt;/span&gt;

    ## YAML Front Matter
    Add YAML front matter to documents to extend the metadata that is supplied to your project's templates.

    \`\`\`yaml
    ---
    username: jonschlinkert
    ---
    \`\`\`
    This is probably most useful when:
    1. You need to use the same or similar templates on a number of different projects
    1. You want to supply data to the templates that won't typically be found in package.json
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          root
          : 
        </strong>
        <span>
          _gh_pages
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          dest
          : 
        </strong>
        <span>
          &lt;%= site.root %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          assets
          : 
        </strong>
        <span>
          &lt;%= site.dest %&gt;/assets
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          date
          : 
        </strong>
        <span>
          &lt;%= new Date() %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          data
          : 
        </strong>
        <span>
          data
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          templates
          : 
        </strong>
        <span>
          templates
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          pages
          : 
        </strong>
        <span>
          &lt;%= site.templates %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          includes
          : 
        </strong>
        <span>
          &lt;%= site.templates %&gt;/includes
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          layouts
          : 
        </strong>
        <span>
          &lt;%= site.templates %&gt;/layouts
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          layoutext
          : 
        </strong>
        <span>
          .hbs
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          layout
          : 
        </strong>
        <span>
          default
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          styles
          : 
        </strong>
        <span>
          styles
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          components
          : 
        </strong>
        <span>
          &lt;%= site.styles %&gt;/components
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          helpers
          : 
        </strong>
        <span>
          &lt;%= site.templates %&gt;/helpers
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          plugins
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          brand
          : 
        </strong>
        <span>
          ASSEMBLE
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          BOILERPLATE
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          lead
          : 
        </strong>
        <span>
          The most awe inspiring static site boilerplate in Northern Kentucky.
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          version
          : 
        </strong>
        <span>
          &lt;%= pkg.version %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          author
          : 
        </strong>
        <span>
          &lt;%= pkg.author.name %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          name
          : 
        </strong>
        <span>
          &lt;%= pkg.name %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          description
          : 
        </strong>
        <span>
          &lt;%= pkg.description %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          url
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          homepage
          : 
        </strong>
        <span>
          &lt;%= pkg.homepage %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          repo
          : 
        </strong>
        <span>
          &lt;%= pkg.homepage %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          issues
          : 
        </strong>
        <span>
          &lt;%= pkg.bugs.url %&gt;?state=open
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          ghpages
          : 
        </strong>
        <span>
          https://&lt;%= site.username %&gt;.github.io/&lt;%= pkg.name %&gt;/
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          domain
          : 
        </strong>
        <span>
          http://assemble.io/
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          about
          : 
        </strong>
        <span>
          &lt;%= site.url.domain %&gt;/about/
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          blog
          : 
        </strong>
        <span>
          &lt;%= site.url.domain %&gt;/blog/
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          download
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          source
          : 
        </strong>
        <span>
          &lt;%= pkg.homepage %&gt;/archive/master.zip
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          latest
          : 
        </strong>
        <span>
          &lt;%= pkg.homepage %&gt;/master/dist/&lt;%= pkg.name %&gt;-&lt;%= pkg.version %&gt;.min.js
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          analytics
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          alexa
          : 
        </strong>
        <span>
          lpTeh1awA400OE
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          google
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              id
              : 
            </strong>
            <span>
              UA-XXXXXXXX-YY
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              domain
              : 
            </strong>
            <span>
              assemble.github.io
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              siteid
              : 
            </strong>
            <span>
              -
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              tags
              : 
            </strong>
            <span>
              FOO-012345
            </span>
          </div>
        </section>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          disqus
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          enabled
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          shortname
          : 
        </strong>
        <span>
          &lt;%= pkg.name %&gt;
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          social
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          twitter
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              via
              : 
            </strong>
            <span>
              jonschlinkert
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              username
              : 
            </strong>
            <span>
              jonschlinkert
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              related
              : 
            </strong>
            <span>
              jonschlinkert:Assemble core team.
            </span>
          </div>
        </section>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          facebook
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          linkedin
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          gplus
          : 
        </strong>
        <span>
          -
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          hn
          : 
        </strong>
        <span>
          -
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 123123 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          fold_newlines
          : 
        </strong>
        <span>
          this is really a single line of text despite appearances

        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 123123 2`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          include_newlines
          : 
        </strong>
        <span>
          exactly as you see
will appear these three
lines of poetry

        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 123123 3`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          fold_same_newlines
          : 
        </strong>
        <span>
          a b c d e f 
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 123123 4`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          cascade
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              _target
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  kind
                  : 
                </strong>
                <span>
                  page
                </span>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  lang
                  : 
                </strong>
                <span>
                  en
                </span>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  path
                  : 
                </strong>
                <span>
                  /blog/**
                </span>
              </div>
            </section>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              background
              : 
            </strong>
            <span>
              yosemite.jpg
            </span>
          </div>
        </section>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              _target
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  kind
                  : 
                </strong>
                <span>
                  section
                </span>
              </div>
            </section>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              background
              : 
            </strong>
            <span>
              goldenbridge.jpg
            </span>
          </div>
        </section>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Blog
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render nothing if title and subtitle are not provided 123123 5`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          with-random-chars
          : 
        </strong>
        <span>
          this-is-a-test 123 : 456: abc - 890!
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          current time
          : 
        </strong>
        <span>
          Thursday, December 22nd 2022, 10:09:56 pm
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          time tomorrow
          : 
        </strong>
        <span>
          Friday,--------December 23nd 2022, 10:09:55 pm
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9t defaults_defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          access areas
          : 
        </strong>
        <span>
          all : 123
        </span>
      </div>
    </section>
  </div>
</section>
`;
